--- a/templates/pages/LoginSingUp.html
+++ b/templates/pages/LoginSingUp.html
@@ -39,7 +39,7 @@
                       </div>
                     </div>
                     
-                    <form action="#!" name="login" id="loginForm">
+                    <form action="{% url 'login'%}" name="login" id="loginForm">
                       <div class="row gy-3 overflow-hidden">
                         <div class="col-12">
                           <div class="form-floating mb-3">
