--- a/templates/admindashboard/navbar.html
+++ b/templates/admindashboard/navbar.html
@@ -39,6 +39,17 @@
               </div>
             </a>
             <div class="dropdown-divider"></div>
+            <a class="dropdown-item preview-item" href="{%url 'newclient'%}">
+              <div class="preview-thumbnail">
+                <div class="preview-icon bg-dark rounded-circle">
+                  <i class="mdi mdi-account-plus text-warning"></i>
+                </div>
+              </div>
+              <div class="preview-item-content">
+                <p class="preview-subject ellipsis mb-1">Client</p>
+              </div>
+            </a>
+            <div class="dropdown-divider"></div>
           </div>
         </li>
         <li class="nav-item dropdown border-left">
