--- a/templates/admindashboard/sidebar.html
+++ b/templates/admindashboard/sidebar.html
@@ -31,6 +31,21 @@
         </a>
       </li>
       <li class="nav-item menu-items">
+        <a class="nav-link" data-toggle="collapse" href="#client" aria-expanded="false" aria-controls="ui-basic">
+          <span class="menu-icon">
+            <i class="mdi mdi-account-group"></i>
+          </span>
+          <span class="menu-title">Clients</span>
+          <i class="menu-arrow"></i>
+        </a>
+        <div class="collapse" id="client">
+          <ul class="nav flex-column sub-menu">
+            <li class="nav-item"> <a class="nav-link" href="{% url 'client'%}">All Clients</a></li>
+            <li class="nav-item"> <a class="nav-link" href="{% url 'newclient'%}">Add New Client</a></li>
+          </ul>
+        </div>
+      </li>
+      <li class="nav-item menu-items">
         <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
           <span class="menu-icon">
             <i class="mdi mdi-sale"></i>
@@ -66,14 +81,6 @@
             <i class="mdi mdi-contact-mail"></i>
           </span>
           <span class="menu-title">Contact Us</span>
-        </a>
-      </li>
-      <li class="nav-item menu-items">
-        <a class="nav-link" href="{% url 'client'%}">
-          <span class="menu-icon">
-            <i class="mdi mdi-account-multiple"></i>
-          </span>
-          <span class="menu-title">Clients</span>
         </a>
       </li>
       <li class="nav-item menu-items">
