--- a/templates/admindashboard/category.html
+++ b/templates/admindashboard/category.html
@@ -41,14 +41,14 @@
                 <div class="card">
                   <div class="card-body">
                     <div class="container">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h4 class="card-title">All Categorys</h4>
-                            </div>
-                            <div class="col-md-2 ml-auto">
-                                <a class="nav-link btn btn-success create-new-button" id="createbuttonDropdown" aria-expanded="false" href="{% url 'newcategory'%}">+ Create New</a>
-                            </div>
+                      <div class="row">
+                        <div class="col-md-6">
+                          <h4 class="card-title">All Categories</h4>
                         </div>
+                        <div class="col-md-2 ml-auto">
+                          <a class="nav-link btn btn-success create-new-button" id="createbuttonDropdown" aria-expanded="false" href="{% url 'newcategory'%}">+ Create New</a>
+                        </div>
+                      </div>
                     </div>                                                         
                     <div class="table-responsive">
                       <table class="table">
@@ -61,168 +61,133 @@
                           </tr>
                         </thead>
                         <tbody>
+                          {% for category in categories %}
                           <tr>
-                                <td> 02312 </td>
-                                <td> El Hajj </td>
-                                <td >Cet exemple génère des données à partir d'une distribution normale  </td>
-                                <td class="d-flex">
-                                    <a class="nav-link" data-toggle="modal" href="#editCategoryModal" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0;">
-                                        <div class="badge badge-outline-success">
-                                            <span class="menu-icon">
-                                                <i class="mdi mdi-grease-pencil"></i>
-                                            </span>
-                                        </div>
-                                    </a>
-                                    <a class="nav-link" data-toggle="modal" href="#deleteCategoryModal" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0; padding-left :6%;">
-                                        <div class="badge badge-outline-danger">
-                                            <span class="menu-icon">
-                                                <i class="mdi mdi-delete"></i>
-                                            </span>
-                                        </div>
-                                    </a>
-                                </td>
-                                                            
-                          </tr>
-                          <tr>
-                            <td> 02312 </td>
-                            <td> El Hajj </td>
-                            <td >Cet exemple génère des données à partir d'une distribution normale  </td>
+                            <td> {{ category.id }} </td>
+                            <td> {{ category.nom }} </td>
+                            <td> {{ category.description }} </td>
                             <td class="d-flex">
-                                <a class="nav-link" data-toggle="modal" href="#editCategoryModal" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0;">
-                                    <div class="badge badge-outline-success">
-                                        <span class="menu-icon">
-                                            <i class="mdi mdi-grease-pencil"></i>
-                                        </span>
-                                    </div>
-                                </a>
-                                <a class="nav-link" data-toggle="modal" href="#deleteCategoryModal" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0; padding-left :6%;">
-                                    <div class="badge badge-outline-danger">
-                                        <span class="menu-icon">
-                                            <i class="mdi mdi-delete"></i>
-                                        </span>
-                                    </div>
-                                </a>
+                              <a class="nav-link" data-toggle="modal" href="#editCategoryModal{{ category.id }}" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0;">
+                                <div class="badge badge-outline-success">
+                                  <span class="menu-icon">
+                                    <i class="mdi mdi-grease-pencil"></i>
+                                  </span>
+                                </div>
+                              </a>
+                              <a class="nav-link" data-toggle="modal" href="#deleteCategoryModal{{ category.id }}" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0; padding-left :6%;">
+                                <div class="badge badge-outline-danger">
+                                  <span class="menu-icon">
+                                    <i class="mdi mdi-delete"></i>
+                                  </span>
+                                </div>
+                              </a>
                             </td>
-                                                        
                           </tr>
-                          <tr>
-                                <td> 02312 </td>
-                                <td> El Hajj </td>
-                                <td >Cet exemple génère des données à partir d'une distribution normale  </td>
-                                <td class="d-flex">
-                                    <a class="nav-link" data-toggle="modal" href="#editCategoryModal" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0;">
-                                        <div class="badge badge-outline-success">
-                                            <span class="menu-icon">
-                                                <i class="mdi mdi-grease-pencil"></i>
-                                            </span>
-                                        </div>
-                                    </a>
-                                    <a class="nav-link" data-toggle="modal" href="#deleteCategoryModal" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0; padding-left :6%;">
-                                        <div class="badge badge-outline-danger">
-                                            <span class="menu-icon">
-                                                <i class="mdi mdi-delete"></i>
-                                            </span>
-                                        </div>
-                                    </a>
-                                </td>
-                                                            
-                          </tr>
+                          {% endfor %}
                         </tbody>
                       </table>
                     </div>
                   </div>
                 </div>
-                
               </div>
-              
             </div>
-            <div id="editCategoryModal" class="modal fade" >
-                 <div class="modal-dialog" >
-                    <div class="modal-content">
-                            <div class="card">
-                            <div class="card-body">
-                                <h4 class="card-title">ُEdite Category</h4>
-                                <form class="forms-sample">
-                                <div class="form-group">
-                                    <label for="exampleInputUsername1">Title</label>
-                                    <input type="text" class="form-control" id="exampleInputUsername1" placeholder="Title">
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleTextarea1">Description</label>
-                                    <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
-                                  </div>
-                                <div class="form-group">
-                                    <label>File upload</label>
-                                    <input type="file" name="img[]" class="file-upload-default">
-                                    <div class="input-group col-xs-12">
-                                      <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Image">
-                                      <span class="input-group-append">
-                                        <button class="file-upload-browse btn btn-primary" type="button">Upload</button>
-                                      </span>
-                                    </div>
-                                  </div>
-                                <button type="submit" class="btn btn-primary mr-2">Submit</button>
-                                <button class="btn btn-dark" data-dismiss="modal">Cancel</button>
-                                </form>
-                            </div>
-                            </div>
+            {% for category in categories %}
+            <div id="editCategoryModal{{ category.id }}" class="modal fade">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="card">
+                    <div class="card-body">
+                      <h4 class="card-title">Edit Category</h4>
+                      <form class="forms-sample" method="post" action="{% url 'edit_category' category.id %}" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <div class="form-group">
+                          <label for="title{{ category.id }}">Title</label>
+                          <input type="text" class="form-control" id="title{{ category.id }}" name="nom" value="{{ category.nom}}">
+                        </div>
+                        <div class="form-group">
+                          <label for="description{{ category.id }}">Description</label>
+                          <textarea class="form-control" id="description{{ category.id }}" name="description" rows="4">{{ category.description }}</textarea>
+                        </div>
+                        <div class="form-group">
+                          <label>Current Image</label>
+                          {% if category.image %}
+                            <img src="{{ category.image.url }}" alt="{{ category.nom }}" class="img-thumbnail d-block">
+                          {% else %}
+                            <p class="ml-2 text-warning">No image available</p>
+                          {% endif %}
+                        </div>
+                        <div class="form-group">
+                          <label>File upload</label>
+                          <input type="file" name="image" class="file-upload-default">
+                          <div class="input-group col-xs-12">
+                            <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Image">
+                            <span class="input-group-append">
+                              <button class="file-upload-browse btn btn-primary" type="button">Upload</button>
+                            </span>
+                          </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary mr-2">Submit</button>
+                        <button class="btn btn-dark" data-dismiss="modal">Cancel</button>
+                      </form>
                     </div>
-                 </div>
-            </div>
-            <div id="deleteCategoryModal" class="modal fade">
-                <div class="modal-dialog">
-                  <div class="modal-content">
-                    <form method="get" id="DeleteAssistantForm">
-                      
-                      <div class="modal-header">						
-                        <h4 class="modal-title">Delete Category</h4>
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                      </div>
-                      <div class="modal-body">					
-                        <p>Are you sure you want to delete these Records?</p>
-                        <p class="text-warning"><small>This action cannot be undone.</small></p>
-                      </div>
-                      <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-danger" value="Delete">
-                      </div>
-                    </form>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <!-- content-wrapper ends -->
-          <!-- partial:partials/_footer.html -->
-          
-          <!-- partial -->
-        </div>
-        <!-- main-panel ends -->
-      </div>
-      <!-- page-body-wrapper ends -->
-    </div>
-    <!-- container-scroller -->
-    <!-- plugins:js -->
-    <script src="{% static 'assets/vendors/js/vendor.bundle.base.js'%}"></script>
-    <!-- endinject -->
-    <!-- Plugin js for this page -->
-    <script src="{% static 'assets/vendors/chart.js/Chart.min.js'%}"></script>
-    <script src="{% static 'assets/vendors/progressbar.js/progressbar.min.js'%}"></script>
-   <script src="{% static 'assets/vendors/owl-carousel-2/owl.carousel.min.js'%}"></script>
-    <!-- End plugin js for this page -->
-    <!-- inject:js -->
-    <script src="{% static 'assets/js/off-canvas.js'%}"></script>
-    <script src="{% static 'assets/js/hoverable-collapse.js'%}"></script>
-    <script src="{% static 'assets/js/misc.js'%}"></script>
-    <script src="{% static 'assets/js/settings.js'%}"></script>
-    <script src="{% static 'assets/js/todolist.js'%}"></script>
-    <script src="{% static 'assets/js/file-upload.js'%}"></script>
-    <!-- endinject -->
-    <!-- Custom js for this page -->
-    <script src="{% static 'assets/js/dashboard.js'%}"></script>
-    <!-- End custom js for this page -->
-    <script src="{% static 'assets/vendors/select2/select2.min.js'%}"></script>
-    <script src="{% static 'assets/vendors/typeahead.js/typeahead.bundle.min.js'%}"></script>
-    
-  </body>
-</html>
+            <div id="deleteCategoryModal{{ category.id }}" class="modal fade">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <form method="post" id="DeleteAssistantForm" action="{% url 'delete_category' category.id %}">
+                    {% csrf_token %}
+                    <div class="modal-header">
+                      <h4 class="modal-title">Delete Category</h4>
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                      <p>Are you sure you want to delete this category?</p>
+                      <p class="text-warning"><small>This action cannot be undone.</small></p>
+                    </div>
+                    <div class="modal-footer">
+                      <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                      <input type="submit" class="btn btn-danger" value="Delete">
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+            {% endfor %}
+            </div>
+            </div>
+            <!-- content-wrapper ends -->
+            <!-- partial:partials/_footer.html -->
+
+            <!-- partial -->
+            </div>
+            <!-- main-panel ends -->
+            </div>
+            <!-- page-body-wrapper ends -->
+            </div>
+            <!-- container-scroller -->
+            <!-- plugins:js -->
+            <script src="{% static 'assets/vendors/js/vendor.bundle.base.js'%}"></script>
+            <!-- endinject -->
+            <!-- Plugin js for this page -->
+            <script src="{% static 'assets/vendors/chart.js/Chart.min.js'%}"></script>
+            <script src="{% static 'assets/vendors/progressbar.js/progressbar.min.js'%}"></script>
+            <script src="{% static 'assets/vendors/owl-carousel-2/owl.carousel.min.js'%}"></script>
+            <!-- End plugin js for this page -->
+            <!-- inject:js -->
+            <script src="{% static 'assets/js/off-canvas.js'%}"></script>
+            <script src="{% static 'assets/js/hoverable-collapse.js'%}"></script>
+            <script src="{% static 'assets/js/misc.js'%}"></script>
+            <script src="{% static 'assets/js/settings.js'%}"></script>
+            <script src="{% static 'assets/js/todolist.js'%}"></script>
+            <script src="{% static 'assets/js/file-upload.js'%}"></script>
+            <!-- endinject -->
+            <!-- Custom js for this page -->
+            <script src="{% static 'assets/js/dashboard.js'%}"></script>
+            <!-- End custom js for this page -->
+            <script src="{% static 'assets/vendors/select2/select2.min.js'%}"></script>
+            <script src="{% static 'assets/vendors/typeahead.js/typeahead.bundle.min.js'%}"></script>
+            </body>
+            </html>
