admins can add/edit/delete promotions

--- a/templates/admindashboard/navbar.html
+++ b/templates/admindashboard/navbar.html
@@ -50,6 +50,17 @@
               </div>
             </a>
             <div class="dropdown-divider"></div>
+            <a class="dropdown-item preview-item" href="{%url 'promotion'%}">
+              <div class="preview-thumbnail">
+                <div class="preview-icon bg-dark rounded-circle">
+                  <i class="mdi mdi-tag text-success"></i>
+                </div>
+              </div>
+              <div class="preview-item-content">
+                <p class="preview-subject ellipsis mb-1">Promotion</p>
+              </div>
+            </a>
+            <div class="dropdown-divider"></div>
           </div>
         </li>
         <li class="nav-item dropdown border-left">
