--- a/templates/admindashboard/sidebar.html
+++ b/templates/admindashboard/sidebar.html
@@ -76,6 +76,21 @@
         </div>
       </li>
       <li class="nav-item menu-items">
+        <a class="nav-link" data-toggle="collapse" href="#promotion" aria-expanded="false" aria-controls="ui-basic">
+          <span class="menu-icon">
+            <i class="mdi mdi-tag"></i>
+          </span>
+          <span class="menu-title">Promotion</span>
+          <i class="menu-arrow"></i>
+        </a>
+        <div class="collapse" id="promotion">
+          <ul class="nav flex-column sub-menu">
+            <li class="nav-item"> <a class="nav-link" href="{% url 'promotion'%}">All Promotions</a></li>
+            <li class="nav-item"> <a class="nav-link" href="{% url 'newpromotion'%}">Add New Promotion</a></li>
+          </ul>
+        </div>
+      </li>
+      <li class="nav-item menu-items">
         <a class="nav-link" href="{% url 'contactus'%}">
           <span class="menu-icon">
             <i class="mdi mdi-contact-mail"></i>
