added the profile/settings functionnality

--- a/templates/clientdashboard/sidebar.html
+++ b/templates/clientdashboard/sidebar.html
@@ -18,7 +18,7 @@
                     <a title="Landing Page" href="{% url "clientsettings" %}" aria-expanded="false"><span class="fa fa-cog"></span><span class="mini-click-non" style="padding-left: 10px;">Settings</span></a>
                     </li>
                     <li>
-                      <a title="Landing Page" href="logout.html" aria-expanded="false"><span class="fa fa-sign-in"></span><span class="mini-click-non" style="padding-left: 10px;">Log out</span></a>
+                      <a title="Landing Page" href="{% url 'logout' %}" aria-expanded="false"><span class="fa fa-sign-in"></span><span class="mini-click-non" style="padding-left: 10px;">Log out</span></a>
                     </li>
                 </ul>
             </nav>
