--- a/templates/admindashboard/settings.html
+++ b/templates/admindashboard/settings.html
@@ -41,18 +41,19 @@
                     <div class="card">
                       <div class="card-body">
                         <h4 class="card-title">Personnel Information</h4>
-                        <form class="forms-sample">
+                        <form class="forms-sample" method="POST" action="{% url 'update_profile' %}">
+                          {% csrf_token %}
                           <div class="form-group">
-                            <label for="exampleInputUsername1">Full Name</label>
-                            <input type="text" class="form-control" id="exampleInputUsername1" placeholder="Full Name">
+                            <label for="exampleInputFirstName">First Name</label>
+                            <input type="text" class="form-control" id="exampleInputFirstName" placeholder="First Name" name="first_name" value="{{ request.user.first_name }}">
+                          </div>
+                          <div class="form-group">
+                            <label for="exampleInputLastName">Last Name</label>
+                            <input type="text" class="form-control" id="exampleInputLastName" placeholder="Last Name" name="last_name" value="{{ request.user.last_name }}">
                           </div>
                           <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-                          </div>
-                          <div class="form-group ">
-                            <label for="exampleInputMobile" >Mobile</label>
-                              <input type="text" class="form-control" id="exampleInputMobile" placeholder="Mobile number">
+                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" name="email" value="{{ request.user.email }}">
                           </div>
                           <div class="form-group">
                             <label>Profile Picture Update</label>
@@ -73,25 +74,26 @@
                     <div class="card">
                       <div class="card-body">
                         <h4 class="card-title">Change Password</h4>
-                        <form class="forms-sample">
+                        <form class="forms-sample" method="POST" action="{% url 'change_password' %}" onsubmit="return validatePassword()">
+                          {% csrf_token %}
                           <div class="form-group row">
                           </div>
                           <div class="form-group row">
                             <label for="exampleInputPassword2" class="col-sm-3 col-form-label">Old Password</label>
                             <div class="col-sm-9">
-                              <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Old Password">
+                              <input type="password" class="form-control" id="old_password" placeholder="Old Password" name="old_password">
                             </div>
                           </div>
                           <div class="form-group row">
                             <label for="exampleInputPassword2" class="col-sm-3 col-form-label"> New Password</label>
                             <div class="col-sm-9">
-                              <input type="password" class="form-control" id="exampleInputPassword2" placeholder="New Password">
+                              <input type="password" class="form-control" id="new_password" placeholder="New Password" name="new_password">
                             </div>
                           </div>
                           <div class="form-group row">
                             <label for="exampleInputConfirmPassword2" class="col-sm-3 col-form-label">Confirm Password</label>
                             <div class="col-sm-9">
-                              <input type="password" class="form-control" id="exampleInputConfirmPassword2" placeholder="Confirm Password">
+                              <input type="password" class="form-control" id="confirm_password" placeholder="Confirm Password">
                             </div>
                           </div>
                           <button type="submit" class="btn btn-primary mr-2">Update Password</button>
@@ -102,6 +104,18 @@
             </div>
             </div>
           </div>
+          <script>
+              // Password and Confirm Password validation
+              function validatePassword() {
+                  var password = document.getElementById("new_password").value;
+                  var confirmPassword = document.getElementById("confirm_password").value;
+                  if (password != confirmPassword) {
+                      alert("Passwords do not match.");
+                      return false;
+                  }
+                  return true;
+              }
+          </script>
           <!-- content-wrapper ends -->
           <!-- partial:partials/_footer.html -->
           
