--- a/templates/admindashboard/newoffer.html
+++ b/templates/admindashboard/newoffer.html
@@ -64,12 +64,13 @@
                                 </div>
                               </div>
                             <div class="form-group">
-                                <label for="exampleTextarea1">Category</label>
-                                    <select class="form-control" name="categorie">
-                                        {% for category in categories %}
-                                        <option value="{{ category.id }}">{{ category.nom }}</option>
-                                        {% endfor %}
-                                    </select>
+                              <label for="exampleTextarea1">Category</label>
+                              <select class="form-control" name="categorie">
+                                <option value="">No Category</option>
+                                {% for category in categories %}
+                                <option value="{{ category.id }}">{{ category.nom }}</option>
+                                {% endfor %}
+                              </select>
                             </div>
                             <div class="form-group">
                               <label for="exampleTextarea1">Promotion</label>
